src/core-crm/objects/Distribution_Management__c/Distribution_Management__c.object-meta.xml
<CustomObject>
    <description>Distribution Management records enable users to setup and control how donation payments will be distributed for each Designation.</description>
    <label>Distribution Management</label>
    <nameField>
        <displayFormat>DM-{000000}</displayFormat>
        <label>Distribution Management Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>