src/core-crm/objects/Distribution_Management__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Designation record.</description>
    <inlineHelpText>Lookup to the Designation record.</inlineHelpText>
    <label>Designation</label>
    <referenceTo>Designation__c</referenceTo>
    <relationshipLabel>Distribution Managements</relationshipLabel>
    <relationshipName>Distribution_Managements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>