src/core-crm/objects/Distribution_Management__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The effective end date of the Distribution Split arrangement/s.</description>
    <inlineHelpText>The effective end date of the Distribution Split arrangement/s.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>