src/core-crm/objects/Distribution_Management__c/fields/Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Id__c</fullName>
    <description>Identifier/reference for an external source to support Data Migration.</description>
    <externalId>true</externalId>
    <inlineHelpText>Identifier/reference for an external source to support Data Migration.</inlineHelpText>
    <label>Migration Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>