src/core-crm/objects/Distribution_Management__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The effective start date of the Distribution Split arrangement/s.</description>
    <inlineHelpText>The effective start date of the Distribution Split arrangement/s.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>