src/core-crm/objects/Distribution_Management__c/validationRules/ReadyForUse_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ReadyForUse_Status_Validation</fullName>
    <active>true</active>
    <description>Ensures that the user can only progress to the next status and cannot back to define status.</description>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
ISPICKVAL(PRIORVALUE(Status__c),&quot;Ready For Use&quot;),
AND(ISPICKVAL( Status__c, &apos;Define&apos;))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You cannot move the status back to define.</errorMessage>
</ValidationRule>