src/core-crm/objects/Distribution_Management__c/validationRules/Start_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_is_Required</fullName>
    <active>true</active>
    <description>Ensures that the user inputs start date and cannot be in the past.</description>
    <errorConditionFormula>AND(
    OR(
    ISNEW(),
    ISCHANGED(Start_Date__c)
    ),
    NOT(ISBLANK(Start_Date__c)),
    Start_Date__c  &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>The Start Date cannot be in the past.</errorMessage>
</ValidationRule>